% small CSS fix for Opera bug with jumping select boxes
git-svn-id: http://svn.debugger.ru/repos/jslibs/Virtual%20Keyboard/trunk@668 9a90dfcf-8112-0410-8cf2-8049563067c9

--- a/css/air_large/keyboard.css
+++ b/css/air_large/keyboard.css
@@ -314,11 +314,11 @@ html.VirtualKeyboardPopup, body.VirtualKeyboardPopup {
         border: 1px solid black;
         bottom: 2px;
         position: absolute;
-        right: 2px;
+        left: 734px;
         width: 125px;
 }
 #virtualKeyboard select#kb_mappingselector {
-        right: 140px;
+        left: 607px;
 }
 #virtualKeyboard select,
 #virtualKeyboard select option {
