--- a/css/air_mid/keyboard.css
+++ b/css/air_mid/keyboard.css
@@ -313,11 +313,11 @@ html.VirtualKeyboardPopup, body.VirtualKeyboardPopup {
         border: 1px solid black;
         bottom: 2px;
         position: absolute;
-        right: 2px;
+        left: 554px;
         width: 125px;
 }
 #virtualKeyboard select#kb_mappingselector {
-        right: 140px;
+        left: 427px;
 }
 #virtualKeyboard select,
 #virtualKeyboard select option {
