--- a/css/air_small/keyboard.css
+++ b/css/air_small/keyboard.css
@@ -315,11 +315,11 @@ html.VirtualKeyboardPopup, body.VirtualKeyboardPopup {
         border: 1px solid black;
         bottom: 2px;
         position: absolute;
-        right: 2px;
+        left: 314px;
         width: 125px;
 }
 #virtualKeyboard select#kb_mappingselector {
-        right: 140px;
+        left: 186px;
 }
 #virtualKeyboard select,
 #virtualKeyboard select option {
