--- a/css/flat_gray/keyboard.css
+++ b/css/flat_gray/keyboard.css
@@ -314,11 +314,11 @@ html.VirtualKeyboardPopup, body.VirtualKeyboardPopup {
         border: 1px solid black;
         bottom: 2px;
         position: absolute;
-        right: 2px;
+        left: 524px;
         width: 125px;
 }
 #virtualKeyboard select#kb_mappingselector {
-        right: 140px;
+        left: 396px;
 }
 #virtualKeyboard select,
 #virtualKeyboard select option {
