--- a/css/small/keyboard.css
+++ b/css/small/keyboard.css
@@ -278,11 +278,10 @@ html.VirtualKeyboardPopup, body.VirtualKeyboardPopup {
         border: 1px solid black;
         bottom: 21px;
         position: absolute;
-        right: 2px;
+        left: 149px;
         width: 125px;
 }
 #virtualKeyboard select#kb_mappingselector {
-        right: 2px;
         bottom: 2px;
 }
 #virtualKeyboard select,
