--- a/css/soberTouch/keyboard.css
+++ b/css/soberTouch/keyboard.css
@@ -317,11 +317,11 @@ html.VirtualKeyboardPopup, body.VirtualKeyboardPopup {
         border: 1px solid black;
         bottom: 2px;
         position: absolute;
-        right: 2px;
+        left: 479px;
         width: 125px;
 }
 #virtualKeyboard select#kb_mappingselector {
-        right: 140px;
+        left: 351px;
 }
 #virtualKeyboard select,
 #virtualKeyboard select option {
