--- a/css/winxp/keyboard.css
+++ b/css/winxp/keyboard.css
@@ -312,11 +312,11 @@ html.VirtualKeyboardPopup, body.VirtualKeyboardPopup {
         border: 1px solid black;
         bottom: 2px;
         position: absolute;
-        right: 2px;
+        left: 268px;
         width: 125px;
 }
 #virtualKeyboard select#kb_mappingselector {
-        right: 140px;
+        left: 142px;
 }
 #virtualKeyboard select,
 #virtualKeyboard select option {
